Turn off gzip compression

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/Final Build.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/Final Build.data.br",
-        frameworkUrl: buildUrl + "/Final Build.framework.js.br",
-        codeUrl: buildUrl + "/Final Build.wasm.br",
+        dataUrl: buildUrl + "/Final Build.data",
+        frameworkUrl: buildUrl + "/Final Build.framework.js",
+        codeUrl: buildUrl + "/Final Build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Marblejam",
